# agneax

./: .gitignore  LICENSE  README.md  RELEASE_NOTES.md  agneaxOS_improvement_prompt.txt  agneaxOS_login_desktop_redirect_analysis.txt  agneaxOS_prompt_gap_analysis.txt  agneaxOS_tty_login_graphical_fix_prompt.txt  agneaxOS_virtualbox_blank_screen_prompt.txt  check-log.txt
.github/workflows/: build-iso.yml
agneax-desktop/: main.py
agneax-iso/: build_iso.sh  install_deps.sh  package_plymouth.sh  package_store.sh
agneax-login/: metadata.desktop
agneax-login/Backgrounds/: .gitkeep
agneax-login/Components/: Input.qml
agneax-services/: Cargo.toml
agneax-services/src/: main.rs
agneax-settings/qml/: SidebarItem.qml
agneax-shell/qml/: DesktopShell.qml
agneax-system-monitor/qml/: WidgetsDashboard.qml
branding/: sddm-theme.conf
control-center/: main.py
control-center/qml/: AccentCircle.qml  ControlCenter.qml
desktop/: file_manager.py  main.py  terminal.py
desktop/cpp_src/: CMakeLists.txt  compositor_helper.cpp
desktop/qml/: AppsOverview.qml  DesktopIcon.qml  DesktopShell.qml  DesktopWindow.qml  Dock.qml  DockItem.qml  Panel.qml  QSToggleButton.qml  QuickSettings.qml  StartMenu.qml  TaskbarIcon.qml
docs/: api.md  build.md  contribution.md  developer.md  installation.md  user_guide.md
installer/: main.py
installer/qml/: Installer.qml
plymouth-src/: .gitlab-ci.yml
plymouth-src/po/: ar.po  be.po  bg.po  ca.po  cs.po  da.po  (+27 more)
scripts/: build_iso.sh  install_deps.sh  package_plymouth.sh  package_store.sh
store/: main.py
tests/: test_agneax.py
(+41 files in other folders)
