[package]
name = "agneax-core"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
sysinfo = "0.30"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_repr = "0.1"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
